<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".UtamaActivity">

  <androidx.cardview.widget.CardView
      android:id="@+id/lin_budget"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

          <TextView
              android:id="@+id/tmpl_UserName"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/user_name"
              android:textStyle="bold"
              android:textSize="20sp"
              android:layout_marginTop="10sp"
              android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

          <ImageButton
              android:id="@+id/menutransaksi"
              android:layout_width="40dp"
              android:layout_height="40dp"
              android:background="?attr/selectableItemBackgroundBorderless"
              android:contentDescription="HideMoney"
              android:src="@drawable/baseline_menu_24"
              tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

      </LinearLayout>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          android:orientation="horizontal">

          <ImageView
              android:layout_width="40dp"
              android:layout_height="40dp"
              android:src="@drawable/money"
              android:layout_marginLeft="10dp"
              android:contentDescription="@string/money_icon_description" />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/saldo"
              android:textSize="16sp"
              android:layout_gravity="center_vertical"
              android:layout_marginStart="5sp" />

          <TextView
              android:id="@+id/Balance"
              android:layout_width="150dp"
              android:layout_height="wrap_content"
              android:text="@string/balance"
              android:textStyle="bold"
              android:textSize="17sp"
              android:layout_gravity="center_vertical"
              android:layout_marginStart="5sp"/>

        </LinearLayout>
        <ImageButton
            android:id="@+id/eyeicon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="50dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="HideMoney"
            android:padding="16dp"
            android:src="@drawable/eye"
            tools:ignore="Hide,TouchTargetSizeCheck"
            android:layout_marginTop="7dp"/>
        </LinearLayout>
    </LinearLayout>

  </androidx.cardview.widget.CardView>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerViewMain"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_below="@id/lin_budget"
      android:layout_marginTop="5dp"
      android:clipToPadding="false"
      android:scrollbars="vertical"
      android:layout_marginBottom="72dp"/>


  <androidx.cardview.widget.CardView
      android:id="@+id/cardViewMenu"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:elevation="6dp"
      android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="true">

      <!-- Menu 1 -->
      <LinearLayout
          android:id="@+id/menu1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:orientation="vertical"
          android:gravity="center"
          android:padding="8dp">

        <ImageView
            android:id="@+id/iconmenu1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/transaction"
            android:contentDescription="@string/menu_1_description"
            app:tint="@color/menu_icon_color" />

        <TextView
            android:id="@+id/textmenu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_1_text"
            android:textStyle="bold"
            android:textColor="@color/menu_text_color" />
      </LinearLayout>


      <!-- Menu 2 -->
      <LinearLayout
          android:id="@+id/menu2"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:orientation="vertical"
          android:gravity="center"
          android:padding="8dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/statisticspie"
            android:contentDescription="@string/menu_2_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_2_text" />
      </LinearLayout>

      <!-- Menu 3 -->
      <LinearLayout
          android:id="@+id/menu3"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:orientation="vertical"
          android:gravity="center"
          android:padding="8dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/wallet"
            android:contentDescription="@string/menu_3_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_3_text" />
      </LinearLayout>
    </LinearLayout>
  </androidx.cardview.widget.CardView>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/fab_add"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentBottom="true"
      android:layout_marginStart="40dp"
      android:layout_marginTop="80dp"
      android:layout_marginEnd="20dp"
      android:layout_marginBottom="80dp"
      android:contentDescription="@string/add_item_description"
      android:minHeight="48dp"
      android:src="@drawable/baseline_add_24" />

  </RelativeLayout>