<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".WalletMActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/Judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="DOMPET"
                        android:textStyle="bold"
                        android:textSize="24sp"
                        android:layout_marginTop="10sp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="10dp"
                        />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerDompet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Judul"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="60dp" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_dompet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/add_item_description"
        android:minHeight="48dp"
        android:src="@drawable/baseline_add_24" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <!-- LinearLayout untuk menu -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="true">

            <!-- Menu 1 -->
            <LinearLayout
                android:id="@+id/menu1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/iconmenu1"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/transaction"
                    android:contentDescription="@string/menu_1_description" />

                <TextView
                    android:id="@+id/textmenu1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_1_text"
                    android:textStyle="bold"/>
            </LinearLayout>


            <!-- Menu 2 -->
            <LinearLayout
                android:id="@+id/menu2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/statisticspie"
                    android:contentDescription="@string/menu_2_description"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_2_text"/>

            </LinearLayout>

            <!-- Menu 3 -->
            <LinearLayout
                android:id="@+id/menu3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/wallet"

                    app:tint="@color/menu_icon_color"
                    android:contentDescription="@string/menu_3_description" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/menu_text_color"
                    android:text="@string/menu_3_text" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>